--- a/BarTender/app/src/main/AndroidManifest.xml
+++ b/BarTender/app/src/main/AndroidManifest.xml
@@ -8,13 +8,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".Activités.Main"
-            android:label="@string/app_name" >
+            android:name=".Activites.ChoixLangue"
+            android:label="BarTender" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Activites.Login"
+            android:label="BarTender" >
         </activity>
     </application>
 
