Recherche de boisson ok

--- a/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
         <activity android:name=".Consult"
             android:label="Bar_tender">
         </activity>
+        <activity android:name=".ConsultTag"
+            android:label="Bar_tender">
+        </activity>
     </application>
 
 </manifest>
