--- a/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
@@ -26,11 +26,17 @@
             android:name=".Carte"
             android:label="@string/title_activity_carte" >
         </activity>
-        <activity android:name=".Consult"
-            android:label="Bar_tender">
+        <activity
+            android:name=".Consult"
+            android:label="Bar_tender" >
         </activity>
-        <activity android:name=".ConsultTag"
-            android:label="Bar_tender">
+        <activity
+            android:name=".ConsultTag"
+            android:label="Bar_tender" >
+        </activity>
+        <activity
+            android:name=".consult_details"
+            android:label="@string/title_activity_consult_details" >
         </activity>
     </application>
 
