--- a/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
@@ -54,6 +54,10 @@
             android:name=".Paiement"
             android:label="@string/title_activity_paiement" >
         </activity>
+        <activity
+            android:name=".ConsultInventaire"
+            android:label="@string/title_activity_inventaire" >
+        </activity>
     </application>
 
 
