Ajout de l'activité AjoutBoisson

--- a/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
@@ -62,6 +62,10 @@
             android:name=".ChoixInventaire"
             android:label="@string/title_activity_choixinventaire" >
         </activity>
+        <activity
+            android:name=".AjoutBoisson"
+            android:label="@string/title_activity_ajoutboisson" >
+        </activity>
     </application>
 
 
