code qui compile

--- a/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
         </activity>
         <activity
             android:name=".AjoutBoisson"
-            android:label="@string/title_activity_ajoutboisson" >
+            android:label="Ajout Boisson" >
         </activity>
     </application>
 
