--- a/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/"
+        android:icon="@drawable/logo"
+
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Holo" >
         <activity
