--- a/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
@@ -66,6 +66,11 @@
             android:name=".AjoutBoisson"
             android:label="Ajout Boisson" >
         </activity>
+        <activity
+            android:name=".RetraitBoisson"
+            android:label="Retrait" >
+        </activity>
+
     </application>
 
 
