classe Activité Modification Stock terminée

--- a/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
+++ b/DeuxiemeAppli/Bar_tender/app/src/main/AndroidManifest.xml
@@ -71,6 +71,11 @@
             android:name=".RetraitBoisson"
             android:label="Retrait" >
         </activity>
+        <activity
+            android:name=".ModificationInventaire"
+            android:label="Modification" >
+        </activity>
+
 
     </application>
 
